fix loader text on mobile

--- a/assets/scss/components/loader.scss
+++ b/assets/scss/components/loader.scss
@@ -67,7 +67,7 @@
         }
 
         @include max(sm) {
-          bottom: 25vw;
+          bottom: 40vw;
         }
 
         &.fade-in {
